frontend/test/should_pass/deleteInSubpattern_e.grg
rule r
{
	-e:Edge->;
	p:P(e);
	
	modify {
		p();
	}
}

pattern P(-e:Edge->)
{
	modify {
		delete(e);
	}
}
