frontend/test/should_fail/exec_035a.grg
pattern P {
  modify{
    exec(r);
  }
}

rule r {
  p:P();
  modify {
    p();
  }
}